# reactive_htmx

./: .gitignore  README.md  manage.py  pyproject.toml
home/: urls.py  views.py
home/templates/home/: base.html  index.html
home/templates/home/components/: aside.html
home/templates/home/contents/: actions.html  dashboard.html  tickets.html
reactive_htmx/: asgi.py  settings.py  urls.py  wsgi.py
